// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Header component renders correctly when logged in 1`] = `
<header>
  <nav>
    <div
      className="nav-wrapper orange"
    >
      <NavLink
        activeClassName="active"
        ariaCurrent="true"
        className="brand-logo"
        to="/home"
      >
        Yummy Recipes
      </NavLink>
      <NavLink
        activeClassName="active"
        ariaCurrent="true"
        className="button-collapse"
        data-activates="mobile-demo"
        to="/"
      >
        <i
          className="fa fa-bars"
        />
      </NavLink>
      <ul
        className="right hide-on-med-and-down"
      >
        <Component
          activeClass="active-nav-link"
          loggedIn={true}
          logoutUser={[Function]}
          userName="D"
        />
      </ul>
      <ul
        className="side-nav"
        id="mobile-demo"
      >
        <ProfileCard
          userData={
            Object {
              "firstname": "D",
              "id": "1",
              "lastname": "E",
            }
          }
        />
        <Component
          activeClass="active-sidebar-link"
          loggedIn={true}
          logoutUser={[Function]}
          userName="D"
        />
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Test Header component renders correctly when logged out 1`] = `
<header>
  <nav>
    <div
      className="nav-wrapper orange"
    >
      <NavLink
        activeClassName="active"
        ariaCurrent="true"
        className="brand-logo"
        to="/"
      >
        Yummy Recipes
      </NavLink>
      <NavLink
        activeClassName="active"
        ariaCurrent="true"
        className="button-collapse"
        data-activates="mobile-demo"
        to="/"
      >
        <i
          className="fa fa-bars"
        />
      </NavLink>
      <ul
        className="right hide-on-med-and-down"
      >
        <Component
          activeClass="active-nav-link"
          loggedIn={false}
          logoutUser={[Function]}
          userName="Profile"
        />
      </ul>
      <ul
        className="side-nav"
        id="mobile-demo"
      >
        <Component
          activeClass="active-sidebar-link"
          loggedIn={false}
          logoutUser={[Function]}
          userName="Profile"
        />
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Test MenuItems comonent  renders correctly 1`] = `
<div>
  <li>
    <NavLink
      activeClassName="active-nav-link"
      ariaCurrent="true"
      to="/home"
    >
      <i
        className="fa fa-home"
      />
       Home
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active-nav-link"
      ariaCurrent="true"
      to="/recipes"
    >
      <i
        className="fa fa-cutlery"
      />
       Recipes
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active-nav-link"
      ariaCurrent="true"
      to="/categories"
    >
      <i
        className="fa fa-tags"
      />
       Categories
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active-nav-link"
      ariaCurrent="true"
      id="pdrop"
      to="/profile"
    >
      <i
        className="fa fa-user"
      />
       
      D
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      onClick={[Function]}
      to="/"
    >
       
      <i
        className="fa fa-sign-out"
      />
       Logout
    </NavLink>
  </li>
</div>
`;
